--- a/17-17.Mai/content/auswertung.tex
+++ b/17-17.Mai/content/auswertung.tex
@@ -51,6 +51,9 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
   \begin{tabular}{c|c|c|c|c}
     & $\phi_1$ / rad & $\phi_2$ / rad & $\overline{\phi}_{1,2}$ / rad & $\cos(\overline{\phi}_{1,2})$ \\
     \hline
+    Helium                  & 0.531 & 0.534 & $\num{0.532 +- 0.002}$ &
+                            $\num{0.821 +- 0.001}$ \\
+    \hline
     \multirow{3}*{Natrium}  & 0.606 & 0.609 & $\num{0.607 +- 0.002}$ &
                             $\num{0.821 +- 0.001}$ \\
                             & 0.632 & 0.637 & $\num{0.634 +- 0.003}$ & $\num{0.805 +- 0.002}$ \\
@@ -77,6 +80,9 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
   \centering
   \begin{tabular}{c|c|c|c|c}
     & $\lambda_1$ / $10^{-9}$ m & $\lambda_2$ / $10^{-9}$ m & $\Delta t$ / Skt & $\Psi$ / $10^{-7} \cdot \frac{\text{m}}{\text{Skt}}$ \\
+    \hline
+    Helium                  & 501.6 & 504.8 & -0.0035 & $\num{9.83 +- 0.01}$
+                            \\
     \hline
     \multirow{3}*{Natrium}  & 559.4 & 562.2 & -0.0035 & $\num{9.83 +- 0.01}$
                             \\
