--- a/17-17.Mai/content/theorie.tex
+++ b/17-17.Mai/content/theorie.tex
@@ -22,7 +22,7 @@ ergeben. Dabei ist $n$ die Hauptquantenzahl. Da es sich jedoch um ein Kugelsymet
   U = - \frac{\left( z - \sigma \right) e_0^2}{4 \pi  \varepsilon_0 r}
   \label{schrö}
 \end{equation}
-ergibt. Die Lösung der für das an das System angepasste Schrödingergleichung wird relativistisch betrachtet und in einer Potenzreihe umgeschrieben so, dass sich die Energieeigenwerte
+ergibt. Die Lösung der für das an das System angepasste Schrödingergleichung wird relativistisch betrachtet und getaylort, so dass sich die Energieeigenwerte
 \begin{equation}
   E_\text{rel n,l} = -R_{\infty} \left( \frac{(z - \Sigma)^2}{n²} + \alpha^2 \frac{(z - \sigma)^4}{n^3}\left( \frac{2}{2 l +1} - \frac{3}{4n} \right) \right)
   \label{eqn:ham}
@@ -34,10 +34,10 @@ ergeben. Dabei entspricht $\alpha$ der Sommerfeldschen Feinstrukturkonstante, $R
 \end{equation}
 und $l$ ist die Bahndrehquantenzahl die beim lösen der Schrödingergleichung aus der Kugelflächenfunktion resultiert. Desweiteren muss die Spin-Bahn-Kopplung $S$ der Elektronen berücksichtigt werden. Sie ist neben dem aus den kugelsymetrischen Laplaceoperator folgender Drehimpuls $L$ ein weiterer Teil des Gesamtdrehimpulses. Mittels Störungstheorie wird der Einfluss des Spins berechnet. Es ergibt sich die Energieeigenwertgleichung
 \begin{equation}
-  E_\text{n,j} = -R_{\infty}\left( \frac{(z - \Sigma)^2}{n²} + \alpha^2 \frac{(z - \sigma)^4}{n^3} \left( \frac{1}{j + 0.5} - \frac{3}{4n} \right) \right)
+  E_\text{n,j} = -R_{\infty}\left( \frac{(z - \sigma)^2}{n²} + \alpha^2 \frac{(z - \sigma)^4}{n^3} \left( \frac{1}{j + 0.5} - \frac{3}{4n} \right) \right)
   \label{<++>}
 \end{equation}
-wobei die Spinquantenzahl $j$ nur die Werte $l + \frac{1}{2}$ und $l - \frac{1}{2}$ annehmen kann.
+wobei der Gesamtdrehimpuls $j$ nur die Werte $l + \frac{1}{2}$ und $l - \frac{1}{2}$ annehmen kann.
 
 Angeregte Valenzelektronen haben bei den durch die "Quantenzahlen $n ,l$ und $j$ gekennzeichneten Energieniveaus verschiedene Übergangswahrscheinlichkeiten" \cite{sample}. Die entsprechende Bahndrehquantenzahl $l$ ändert sich jeweils um $\Delta l$ = $\pm 1$ . Darüber hinaus ist ein Übergang der Spinquantenzahl $\Delta j = 0$ zwar möglich, aber sehr unwahrscheinlich. Die Hauptquantenzahl $n$ ist nicht eingeschränkt, wird jedoch mit steigendem $n$ immer unwahrscheinlicher. Das Phänomen das bei gleicher Bahndrehquantenzahl und unterschiedlichen Spinquantenzahlen bei Spektrallinien dicht beieinadner liegen, wird als Dublett-Struktur bezeichnet. In Abbildung \ref{fig:ene} ist ein Beispiel für verschiedene Energieniveaus abgebildet.
 
@@ -61,12 +61,12 @@ indem die Gleichung nach der Abschirmkonstante aufgelöst wird. Die Energiediffe
 bestimmt.
 Mit Hilfe der Interferenz an einem Gitter werden die Spektrallinien in ihre einzelnen Wellenlängen aufgespalten. Konstruktive Interferenz wird bei den Maximums $k$ter Ordung unter dem Winkel $\varphi$ beobachtet. Die Gitterkonstante wird als $g$ bezeichnet.
 \begin{equation}
-  sin \, \varphi = k \frac{\lambda}{g}
+  \sin \, \varphi = k \frac{\lambda}{g}
   \label{eqn:phi}
 \end{equation}
 Für die Bestimmung des Wellenlängenunterschieds der Dubletts muss das Okularmikrometer geeicht werden. Näheres zu dem Verfahren wird in der Durchführung erwähnt. Aus Trigonometrischen Überlegungegen ergibt sich die Formel
 \begin{equation}
-  \Delta\lambda = \frac{cos \, \varphi}{cos \, \varphi_{1,2}} \frac{\Delta s}{\Delta t}\left( \lambda_1 - \lambda_2 \right) \ .
+  \Delta\lambda = \frac{\cos \, \varphi}{\cos \, \varphi_{1,2}} \frac{\Delta s}{\Delta t}\left( \lambda_1 - \lambda_2 \right) \ .
   \label{eqn:dlam}
 \end{equation}
 $\varphi$ entspricht dem gemittelten Winkel der Doublettlinien und $\varphi_{1,2}$ die gemittelte Differenz der Doublettlinien. $\Delta s$ ist der Abstand zwischen den beiden Doublettlinien und $\Delta t$ der, der beiden bekannten Spektrallinien $\lambda_1$ und $\lambda_2$.
