--- a/19-31.Mai/content/auswertung.tex
+++ b/19-31.Mai/content/auswertung.tex
@@ -1,3 +1,77 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
+\begin{table}[H] %Frequenzänderung für unterschiedliche Rohrdurchmesser
+  \centering
+  \begin{tabular}{c|c||c|c|c}
+    & Strömungsgeschwindigkeit / \% & $\Delta \nu_1$ / Hz & $\Delta \nu_2$ / Hz & $\Delta \nu_3$ / Hz \\
+    \hline
+    \multirow{5}*{7\,mm \O}  & 20 & 116 & 146 & 250  \\
+                             & 25 & 190 & 300 & 1000 \\
+                             & 30 & 300 & 480 & 800  \\
+                             & 35 & 340 & 600 & 930  \\
+                             & 40 & 460 & 730 & 1050 \\
+    \hline
+    \multirow{5}*{10\,mm \O} & 30 & 122 & 208 & 360  \\
+                             & 35 & 180 & 290 & 530  \\
+                             & 40 & 220 & 360 & 700  \\
+                             & 45 & 280 & 460 & 900  \\
+                             & 50 & 330 & 590 & 1100 \\
+    \hline
+    \multirow{5}*{16\,mm \O} & 30 & 61  & 85  & 145  \\
+                             & 35 & 73  & 134 & 220  \\
+                             & 40 & 100 & 180 & 280  \\
+                             & 45 & 122 & 220 & 370  \\
+                             & 50 & 140 & 250 & 430  \\
+    \hline
+  \end{tabular}
+  \caption{Messwerte der Frequenzänderung bei dem Dopplereffekt für verschiedene Dopplerwinkel und Rohrdurchmesser.}
+  \label{tab:Mess1}
+\end{table}
+
+
+
+\begin{table}[H] %Frequenzänderung für unterschiedliche Eindringtiefen
+  \centering
+  \begin{tabular}{c||c c||c c}
+    & \multicolumn{2}{c||}{Pumpenleistung 70\,\%} & \multicolumn{2}{c}{Pumpenleistung 45\,\%} \\
+    \hline
+    Eindringtiefe / $\mu s$ & $\Delta \nu_1$ / Hz & Intensität & $\Delta \nu_2$ & Intensität \\
+    \hline
+    4.0  & 700 & 23000 & 400 & 14000 \\
+    4.5  & 700 & 24000 & 360 & 13000 \\
+    5.0  & 700 & 24000 & 360 & 13000 \\
+    5.5  & 700 & 24500 & 340 & 10500 \\
+    6.0  & 705 & 25000 & 340 & 10000 \\
+    6.5  & 700 & 26000 & 340 & 10500 \\
+    7.0  & 700 & 26000 & 350 & 10000 \\
+    7.5  & 700 & 26000 & 340 & 9000  \\
+    8.0  & 650 & 26000 & 330 & 9000  \\
+    8.5  & 610 & 23000 & 340 & 8500  \\
+    9.0  & 610 & 23000 & 330 & 8500  \\
+    9.5  & 610 & 19000 & 330 & 8500  \\
+    10.0 & 600 & 17500 & 340 & 8000  \\
+    10.5 & 600 & 17500 & 340 & 8500  \\
+    11.0 & 600 & 17000 & 340 & 8000  \\
+    11.5 & 590 & 17000 & 340 & 7500  \\
+    12.0 & 610 & 17000 & 330 & 7500  \\
+    12.5 & 600 & 17500 & 330 & 7500  \\
+    13.0 & 600 & 19000 & 330 & 7000  \\
+    13.5 & 600 & 18500 & 340 & 6500  \\
+    14.0 & 610 & 18500 & 330 & 6500  \\
+    14.5 & 610 & 18500 & 330 & 6500  \\
+    15.0 & 620 & 19000 & 330 & 6000  \\
+    15.5 & 610 & 19000 & 330 & 6000  \\
+    16.0 & 610 & 19000 & 330 & 5500  \\
+    16.5 & 610 & 19500 & 330 & 6000  \\
+    17.0 & 610 & 19000 & 330 & 6000  \\
+    17.5 & 610 & 19000 & 330 & 5500  \\
+    18.0 & 620 & 19000 & 330 & 5500  \\
+    18.5 & 610 & 19500 & 320 & 5500  \\
+    19.0 & 620 & 17000 & 320 & 5000  \\
+    19.5 & 630 & 15000 & 330 & 4700  \\
+    \hline
+  \end{tabular}
+  \caption{Messwerte der Frequenzänderung bei dem Dopplereffekt für verschiedene Eindringtiefen.}
+  \label{tab:Mess2}
+\end{table}
