--- a/17-17.Mai/content/auswertung.tex
+++ b/17-17.Mai/content/auswertung.tex
@@ -52,7 +52,7 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
     & $\phi_1$ / rad & $\phi_2$ / rad & $\overline{\phi}_{1,2}$ / rad & $\cos(\overline{\phi}_{1,2})$ \\
     \hline
     Helium                  & 0.531 & 0.534 & $\num{0.532 +- 0.002}$ &
-                            $\num{0.821 +- 0.001}$ \\
+                            $\num{0.862 +- 0.001}$ \\
     \hline
     \multirow{3}*{Natrium}  & 0.606 & 0.609 & $\num{0.607 +- 0.002}$ &
                             $\num{0.821 +- 0.001}$ \\
@@ -81,21 +81,21 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
   \begin{tabular}{c|c|c|c|c}
     & $\lambda_1$ / $10^{-9}$ m & $\lambda_2$ / $10^{-9}$ m & $\Delta t$ / Skt & $\Psi$ / $10^{-7} \cdot \frac{\text{m}}{\text{Skt}}$ \\
     \hline
-    Helium                  & 501.6 & 504.8 & -0.0035 & $\num{9.83 +- 0.01}$
+    Helium                  & 501.6 & 504.8 & 1.25 & $\num{9.83 +- 0.01}$
                             \\
     \hline
-    \multirow{3}*{Natrium}  & 559.4 & 562.2 & -0.0035 & $\num{9.83 +- 0.01}$
+    \multirow{3}*{Natrium}  & 559.4 & 562.2 & 0.24 & $\num{9.83 +- 0.01}$
                             \\
-                            & 580.3 & 584.5 & -0.0052 & $\num{9.83 +- 0.02}$ \\
-                            & 607.6 & 610.3 & -0.0035 & $\num{9.83 +- 0.01}$ \\
+                            & 580.3 & 584.5 & 0.18 & $\num{9.83 +- 0.02}$ \\
+                            & 607.6 & 610.3 & 0.08 & $\num{9.83 +- 0.01}$ \\
     \hline
-    \multirow{4}*{Kalium}   & 498.7 & 500.2 & -0.0017 & $\num{9.826 +-
-                            0.005}$ \\
-                            & 500.2 & 501.6 & -0.0017 & $\num{9.826 +- 0.005}$ \\
-                            & 570.6 & 572.0 & -0.0017 & $\num{9.826 +- 0.006}$ \\
-                            & 573.4 & 574.8 & -0.0017 & $\num{9.826 +- 0.006}$ \\
+    \multirow{4}*{Kalium}   & 498.7 & 500.2 & 0.89 & $\num{9.826 +- 0.005}$
+                            \\
+                            & 500.2 & 501.6 & 0.67 & $\num{9.826 +- 0.005}$ \\
+                            & 570.6 & 572.0 & 0.86 & $\num{9.826 +- 0.006}$ \\
+                            & 573.4 & 574.8 & 0.81 & $\num{9.826 +- 0.006}$ \\
     \hline
-    Rubidium                & 614.3 & 625.0 & -0.0140 & $\num{9.83 +- 0.06}$
+    Rubidium                & 614.3 & 625.0 & 2.92 & $\num{9.83 +- 0.06}$
                             \\
     \hline
   \end{tabular}
