--- a/19-31.Mai/content/theorie.tex
+++ b/19-31.Mai/content/theorie.tex
@@ -7,12 +7,14 @@ Bewegen sich Sender und Empfänger relativ zueinander kommt es zum Dopplereffekt
   \nu_0 + \Delta \nu = \nu_0 \left( 1 \pm \frac{v}{c} \right) \ .
   \label{}
 \end{equation}
+
 \begin{figure}
   \centering
   \includegraphics[height=5cm]{picture/Doppler.pdf}
-  \caption{Frequenzverschiebung bedingt durch den Sondenwinkel}
+  \caption{Frequenzverschiebung bedingt durch den Sondenwinkel. \cite[1]{sample}}
   \label{fig:dFre}
 \end{figure}
+
 Dabei ist $v$ die Relativgeschwindigkeit zwischen Sender und Empfänger und $c$ die Ausbreitungeschwindigkeit der Welle. Da der Empfänger in Form von einer Ultraschallsonde nicht Prarallel zur Strömung steht muss mit Hilfe von trigonometrischen Überlegungen die aus Abbildung \ref{fig:dFre} ersichtlich werden, die Frequenzverschiebung entsprechend Gleichung \eqref{eqn:dv} berechnet werden.
 \begin{equation}
   \Delta \nu = 2 \nu_0 \frac{v}{c} \cos (\alpha)
