--- a/19-31.Mai/lit.bib
+++ b/19-31.Mai/lit.bib
@@ -1,7 +1,7 @@
 @manual{sample,
   author = {TU Dortmund},
-  title = {Versuch zum Literaturverzeichnis},
+  title = {Versuch US3, Doppler-Sonographie},
   year = 2016,
-  month = 05,  
-  address = {Link einfügen},
+  month = 06,
+  address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/DopplerSonogr.pdf},
 }
