--- a/17-17.Mai/content/auswertung.tex
+++ b/17-17.Mai/content/auswertung.tex
@@ -34,7 +34,7 @@ Die Gitterkonstante $g$ wird mit Hilfe einer linearen Regression der Gleichung \
 
 \begin{figure}[H]
   \centering
-  \includegraphics[height=8cm]{build/Gitterkonstante}
+  \includegraphics[height=8cm]{build/Gitterkonstante.pdf}
   \caption{Ausgleichsgerade zur Berechnung der Gitterkonstante.}
   \label{fig:Gitterkonstante}
 \end{figure}
@@ -79,23 +79,23 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
 \begin{table}[H]
   \centering
   \begin{tabular}{c|c|c|c|c}
-    & $\lambda_1$ / $10^{-9}$ m & $\lambda_2$ / $10^{-9}$ m & $\Delta t$ / Skt & $\Psi$ / $10^{-7} \cdot \frac{\text{m}}{\text{Skt}}$ \\
+    & $\lambda_1$ / $10^{-9}$ m & $\lambda_2$ / $10^{-9}$ m & $\Delta t$ / Skt & $\Psi$ / $10^{-9} \cdot \frac{\text{m}}{\text{Skt}}$ \\
     \hline
-    Helium                  & 501.6 & 504.8 & 1.25 & $\num{9.83 +- 0.01}$
+    Helium                  & 501.6 & 504.8 & 1.25 & $\num{-2.744 +- 0.003}$
                             \\
     \hline
-    \multirow{3}*{Natrium}  & 559.4 & 562.2 & 0.24 & $\num{9.83 +- 0.01}$
+    \multirow{3}*{Natrium}  & 559.4 & 562.2 & 0.24 & $\num{-14.29 +- 0.02}$
                             \\
-                            & 580.3 & 584.5 & 0.18 & $\num{9.83 +- 0.02}$ \\
-                            & 607.6 & 610.3 & 0.08 & $\num{9.83 +- 0.01}$ \\
+                            & 580.3 & 584.5 & 0.18 & $\num{-28.58 +- 0.06}$ \\
+                            & 607.6 & 610.3 & 0.08 & $\num{-42.87 +- 0.06}$ \\
     \hline
-    \multirow{4}*{Kalium}   & 498.7 & 500.2 & 0.89 & $\num{9.826 +- 0.005}$
+    \multirow{4}*{Kalium}   & 498.7 & 500.2 & 0.89 & $\num{-1.927 +- 0.001}$
                             \\
-                            & 500.2 & 501.6 & 0.67 & $\num{9.826 +- 0.005}$ \\
-                            & 570.6 & 572.0 & 0.86 & $\num{9.826 +- 0.006}$ \\
-                            & 573.4 & 574.8 & 0.81 & $\num{9.826 +- 0.006}$ \\
+                            & 500.2 & 501.6 & 0.67 & $\num{-2.560 +- 0.001}$ \\
+                            & 570.6 & 572.0 & 0.86 & $\num{-1.994 +- 0.001}$ \\
+                            & 573.4 & 574.8 & 0.81 & $\num{-2.117 +- 0.001}$ \\
     \hline
-    Rubidium                & 614.3 & 625.0 & 2.92 & $\num{9.83 +- 0.06}$
+    Rubidium                & 614.3 & 625.0 & 2.92 & $\num{-4.70 +- 0.03}$
                             \\
     \hline
   \end{tabular}
@@ -105,7 +105,7 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
 
 Der Mittelwert der Eichgrößen beträgt:
 \begin{align*}
-  \Psi = (\num{9.827 +- 0.008}) \cdot 10^{-7} \frac{\text{m}}{\text{Skt}}
+  \Psi = (\num{-11.31 +- 0.01}) \cdot 10^{-9} \frac{\text{m}}{\text{Skt}}
 \end{align*}
 
 \subsection{Berechnung der Abschirmungszahl}
