--- a/17-17.Mai/content/diskussion.tex
+++ b/17-17.Mai/content/diskussion.tex
@@ -6,12 +6,13 @@ Die Gitterkonstante $g$ beträgt
 \end{align*}
 Die Eichgröße $\Psi$ beträgt
 \begin{align*}
-  \Psi = (\num{9.827 +- 0.008}) \cdot 10^{-7}\ \frac{\text{m}}{\text{Skt}} \ .
+  \Psi = (\num{3.198 +- 0.007}) \cdot 10^{-7}\ \frac{\text{m}}{\text{Skt}} \ .
 \end{align*}
 Die inneren Abschirmungszahlen $\sigma_2$ für die Alkali-Atome betragen
 \begin{align*}
-  \sigma_{2,\text{Na}} & = \num{10.82 +- 0.01} \\
-  \sigma_{2,\text{K}}  & = \num{18.808 +- 0.008} \\
-  \sigma_{2,\text{Rb}} & = 36.65
+  \sigma_{2,\text{Na}} & = \num{7.8 +- 0.4} \\
+  \sigma_{2,\text{K}}  & = \num{12.6 +- 0.3} \\
+  \sigma_{2,\text{Rb}} & = 27.5
 \end{align*}
-Die ausgerechneten Werte für die Abschirmungszahlen liegen im erwarteten Bereich und haben im Mittel nur einen sehr kleinen Fehler. 
+Die ausgerechneten Werte für die Abschirmungszahlen liegen im erwarteten Bereich und haben im Mittel nur einen kleinen Fehler. \\
+Die Fehler der ausgerechneten Werte entstehen vornehmlich durch Ablesefehler bei der Winkelbestimmung.
