--- a/17-17.Mai/content/auswertung.tex
+++ b/17-17.Mai/content/auswertung.tex
@@ -78,25 +78,21 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
 
 \begin{table}[H]
   \centering
-  \begin{tabular}{c|c|c|c|c}
-    & $\lambda_1$ / $10^{-9}$ m & $\lambda_2$ / $10^{-9}$ m & $\Delta t$ / Skt & $\Psi$ / $10^{-9} \cdot \frac{\text{m}}{\text{Skt}}$ \\
+  \begin{tabular}{c|c|c|c}
+    & $\lambda_1$ / $10^{-9}$ m & $\lambda_2$ / $10^{-9}$ m & $\Psi$ / $10^{-9} \cdot \frac{\text{m}}{\text{Skt}}$ \\
     \hline
-    Helium                  & 501.6 & 504.8 & 1.25 & $\num{-2.744 +- 0.003}$
-                            \\
+    Helium                  & 501.6 & 504.8 & $\num{2.741 +- 0.003}$ \\
     \hline
-    \multirow{3}*{Natrium}  & 559.4 & 562.2 & 0.24 & $\num{-14.29 +- 0.02}$
-                            \\
-                            & 580.3 & 584.5 & 0.18 & $\num{-28.58 +- 0.06}$ \\
-                            & 607.6 & 610.3 & 0.08 & $\num{-42.87 +- 0.06}$ \\
+    \multirow{3}*{Natrium}  & 559.4 & 562.2 & $\num{2.741 +- 0.003}$ \\
+                            & 580.3 & 584.5 & $\num{4.111 +- 0.008}$ \\
+                            & 607.6 & 610.3 & $\num{2.741 +- 0.004}$ \\
     \hline
-    \multirow{4}*{Kalium}   & 498.7 & 500.2 & 0.89 & $\num{-1.927 +- 0.001}$
-                            \\
-                            & 500.2 & 501.6 & 0.67 & $\num{-2.560 +- 0.001}$ \\
-                            & 570.6 & 572.0 & 0.86 & $\num{-1.994 +- 0.001}$ \\
-                            & 573.4 & 574.8 & 0.81 & $\num{-2.117 +- 0.001}$ \\
+    \multirow{4}*{Kalium}   & 498.7 & 500.2 & $\num{1.3704 +- 0.0007}$ \\
+                            & 500.2 & 501.6 & $\num{1.3704 +- 0.0007}$ \\
+                            & 570.6 & 572.0 & $\num{1.3704 +- 0.0009}$ \\
+                            & 573.4 & 574.8 & $\num{1.3704 +- 0.0009}$ \\
     \hline
-    Rubidium                & 614.3 & 625.0 & 2.92 & $\num{-4.70 +- 0.03}$
-                            \\
+    Rubidium                & 614.3 & 625.0 & $\num{10.96 +- 0.06}$ \\
     \hline
   \end{tabular}
   \caption{Messwerte zur Bestimmung der Eichgröße Teil 2}
@@ -105,7 +101,7 @@ berechnen. Die dafür benötigten Werte sind in den Tabellen \eqref{tab:Mess2} u
 
 Der Mittelwert der Eichgrößen beträgt:
 \begin{align*}
-  \Psi = (\num{-11.31 +- 0.01}) \cdot 10^{-9} \frac{\text{m}}{\text{Skt}}
+  \Psi = (\num{3.198 +- 0.007}) \cdot 10^{-9} \frac{\text{m}}{\text{Skt}}
 \end{align*}
 
 \subsection{Berechnung der Abschirmungszahl}
@@ -113,7 +109,12 @@ Für die Berechnung der inneren Abschirmungszahl $\sigma_2$ werden mehrere Schri
 \begin{equation*}
   \sigma_2 = z - \sqrt[4]{\Delta E_\text{D} \cdot l(l + 1)\, \frac{n^3}{R_\infty \alpha^2}} \ .
 \end{equation*}
-Dabei ist bei Natrium $n = 3$, bei Kalium $n = 4$ und bei Rubidium $n = 5$ und für alle drei Alkali-Atome ist $l = 1$. Die Ergebnisse und Zwischenergebnisse befinden sich in Tabelle \eqref{tab:Mess3}.
+Dabei wird $\Delta E_\text{D}$ über
+\begin{equation*}
+  \Delta E_\text{D} = h\,c\, \frac{\cos(\Phi)\,\Delta s\,\Psi}{\overline{\lambda}^2}
+\end{equation*}
+berechnet.
+Für Natrium ist $n = 3$, für Kalium ist $n = 4$ und für Rubidium ist $n = 5$ und für alle drei Alkali-Atome ist $l = 1$. Die Ergebnisse und Zwischenergebnisse befinden sich in Tabelle \eqref{tab:Mess3}.
 
 \begin{table}[H]
   \centering
@@ -123,64 +124,39 @@ Dabei ist bei Natrium $n = 3$, bei Kalium $n = 4$ und bei Rubidium $n = 5$ und f
     \hline
     \multicolumn{4}{c}{Natrium} \\
     \hline
-    0.606 & 559.4 & \multirow{2}{*}{0.011} & \multirow{2}{*}{10.82} \\
+    0.606 & 559.4 & \multirow{2}{*}{0.0025} & \multirow{2}{*}{7.31} \\
     0.609 & 562.2 & & \\
     \hline
-    0.632 & 580.3 & \multirow{2}{*}{0.015} & \multirow{2}{*}{10.81} \\
+    0.632 & 580.3 & \multirow{2}{*}{0.0017} & \multirow{2}{*}{7.65} \\
     0.637 & 584.5 & & \\
     \hline
-    0.667 & 607.6 & \multirow{2}{*}{0.009} & \multirow{2}{*}{10.83} \\
+    0.667 & 607.6 & \multirow{2}{*}{0.0007} & \multirow{2}{*}{8.34} \\
     0.670 & 610.3 & & \\
     \hline
-    \multicolumn{3}{c}{Mittelwert für $\sigma_2$ =} & $\num{10.82 +- 0.01}$ \\
+    \multicolumn{3}{c}{Mittelwert für $\sigma_2$ =} & $\num{7.8 +- 0.4}$ \\
     \hline
     \multicolumn{4}{c}{Kalium} \\
     \hline
-    0.532 & 498.7 & \multirow{2}{*}{0.007} & \multirow{2}{*}{18.80} \\
+    0.532 & 498.7 & \multirow{2}{*}{0.0122} & \multirow{2}{*}{12.18} \\
     0.534 & 500.2 & & \\
     \hline
-    0.534 & 500.2 & \multirow{2}{*}{0.008} & \multirow{2}{*}{18.80} \\
+    0.534 & 500.2 & \multirow{2}{*}{0.0091} & \multirow{2}{*}{12.66} \\
     0.536 & 501.6 & & \\
     \hline
-    0.620 & 570.6 & \multirow{2}{*}{0.005} & \multirow{2}{*}{18.82} \\
+    0.620 & 570.6 & \multirow{2}{*}{0.0085} & \multirow{2}{*}{12.77} \\
     0.621 & 572.0 & & \\
     \hline
-    0.623 & 573.4 & \multirow{2}{*}{0.005} & \multirow{2}{*}{18.82} \\
+    0.623 & 573.4 & \multirow{2}{*}{0.0079} & \multirow{2}{*}{12.88} \\
     0.625 & 574.8 & & \\
     \hline
-    \multicolumn{3}{c}{Mittelwert für $\sigma_2$ =} & $\num{18.808 +- 0.008}$ \\
+    \multicolumn{3}{c}{Mittelwert für $\sigma_2$ =} & $\num{12.6 +- 0.3}$ \\
     \hline
     \multicolumn{4}{c}{Rubidium} \\
     \hline
-    0.675 & 614.3 & \multirow{2}{*}{0.034} & \multirow{2}{*}{36.65} \\
+    0.675 & 614.3 & \multirow{2}{*}{0.0235} & \multirow{2}{*}{27.51} \\
     0.689 & 625.0 & & \\
     \hline
   \end{tabular}
   \caption{Messwerte für die Bestimmung der inneren Abschirmungszahlen.}
   \label{tab:Mess3}
-\end{table}
-
-\subsection{Bestimmung der Distanz zwischen den Dublettlinien}
-Die Distanz der Dublettlinien ist in folgender Tabelle aufgeführt.
-
-\begin{table}[H]
-  \centering
-  \begin{tabular}{c c}
-    \toprule
-    & $\Delta s$ / $10^{-3}$ m \\
-    \hline
-    \multirow{3}*{Natrium} & 0.19 \\
-                           & 0.43 \\
-                           & 0.58 \\
-    \hline
-    \multirow{3}*{Kalium}  & 2.06 \\
-                           & 1.94 \\
-                           & 2.14 \\
-                           & 1.61 \\
-    \hline
-    Rubidium               & 7.01 \\
-    \hline
-  \end{tabular}
-  \caption{Die Distanz der Dublettlinien.}
-  \label{tab:}
 \end{table}
