--- a/20-07.Juni/content/theorie.tex
+++ b/20-07.Juni/content/theorie.tex
@@ -1,7 +1,32 @@
+\section{Zielsetzung}
+\label{sec:Zielsetzung}
+Ziel des Versuches ist es die Bewegung der Leitungselektronen näher zu beschreiben. Dazu werden verschiedene mikroskopische Parameter aus den
+zwei durchgeführten Versuchen berechnet.
+
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
 
+\subsection{Der Hall-Effekt}
+Als Hall-Effekt wird das Auftreten einer Spannung in einem Stromdurchflossenen Leiter quer zur Richtung des Stroms bezeichnet, wenn sich der Leiter in einem äußeren Magnetfeld befindet. Die Spannung quer zur Stromrichtung lässt sich durch die Lorentz-Kraft erklären. In Abbildung \eqref{fig:Hall-Effekt} ist der  schematische Aufbau zur Beobachtung des Hall-Effektes zu sehen.
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=7cm]{picture/Hall-Effekt.png}
+	\caption{Schematischer Aufbau zur Beobachtung des Hall-Effektes. \cite[5]{sample}}
+	\label{fig:Hall-Effekt}
+\end{figure}
+
+Am einfachsten ist der Leiter ein Quader der Breite $b$, der Länge $l$ und der Dicke $d$. Das Magnetfeld geht senkrecht durch die Fläche, welche von $b$ und $l$ aufgespannt wird. Der Strom fließt entlang der längsachse, wodurch auf die fließende Ladung die Lorentzkraft
+\begin{equation}
+	F_\text{L} = e_0\,\overline{v}_\text{D}\,B
+\end{equation}
+wirkt. Wobei $e_0$ für die Elementarladung, $v$ für die Geschwindigkeit der Elektronen und $B$ für die magnetische Flussdichte steht.
+
+
+\subsection{Eigenschaft von Kristallen}
+
+
+\subsection{Berechnung der elektrischen Leitfähigkeit eines Metalles}
 
 
 \subsection{Fehlerrechnung}
