--- a/20-07.Juni/main.tex
+++ b/20-07.Juni/main.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{Versuch Nummer 311}
+\title{Der Hall-Effekt und Elektrizitätsleitung bei Metallen}
 \date{
-  Durchführung: DATUM
+  Durchführung: 07.06.2016
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 14.06.2016
 }
 
 \begin{document}
