--- a/20-07.Juni/content/theorie.tex
+++ b/20-07.Juni/content/theorie.tex
@@ -30,7 +30,7 @@ Daraus kann die Ladungsträgerdichte $n$ bestimmt werden.
 
 
 \subsection{Das Bändermodell von Kristallen}
-Wenn eine Anzahl $m$ gleicher Atome dicht beieinander liegen, also einen Festkörper bilden, spalten sich deren Energieniveaus in je $m$ Zustände auf. Das äußerste Energienieveau kann nicht mehr für jedes Atom einzeln betrachtet werden, sondern muss zu dem Gesamtsystem zugeordnet werden. Allerdings liegen die Energieniveaus so dicht beieinander das sie als ein kontinuierliches Spektrum gesehen werden können, diese kontinuierlichen Spektren werden auch Bänder genannt. Die Bänder gehorchen dem Pauli-Prinzip, wodurch sich nur eine bestimmte Anzahl von Elektronen in einem Band aufhalten kann. Die Elektronen in den voll besetzten Bändern können ihr Energieniveau nicht verändern. Zwischen den Bändern befinden sich verbotene Zonen, also Energiebereiche, die keine Zustände zulassen. In Abbildung \eqref{fig:Bandstruktur} ist das Bändermodell für Natrium aufgezeigt.
+Wenn eine Anzahl $m$ gleicher Atome dicht beieinander liegen, also einen Festkörper bilden, spalten sich deren Energieniveaus in je $m$ Zustände auf. Das äußerste Energienieveau kann dann nicht mehr für jedes Atom einzeln betrachtet werden, sondern muss dem Gesamtsystem zugeordnet werden. Allerdings liegen die Energieniveaus so dicht beieinander das sie als ein kontinuierliches Spektrum gesehen werden können, diese kontinuierlichen Spektren werden auch Bänder genannt. Die Bänder gehorchen dem Pauli-Prinzip, wodurch sich nur eine bestimmte Anzahl von Elektronen in einem Band aufhalten kann. Die Elektronen in den voll besetzten Bändern können ihr Energieniveau nicht verändern, das heißt sie können keine Energie aufnehmen oder abgeben. Zwischen den Bändern befinden sich verbotene Zonen, also Energiebereiche, die keine Zustände zulassen. In Abbildung \eqref{fig:Bandstruktur} ist das Bändermodell für Natrium aufgezeigt.
 
 \begin{figure}[H]
 	\centering
@@ -39,7 +39,7 @@ Wenn eine Anzahl $m$ gleicher Atome dicht beieinander liegen, also einen Festkö
 	\label{fig:Bandstruktur}
 \end{figure}
 
-In einem Leiter ist das oberste Band nur teilweise besetzt, wodurch die hohe Leitfähigkeit von Metallen hervorgerufen wird. Dieses Band wird Leitungsband genannt und die Elektronen darin werden Leitungselektronen genannt. Die Leitungselektronen bewegen sich in der Gitterstruktur wie die Teilchen eines idealen Gases. Es kann nun gezeigt werden, dass die Leitungselektronen nicht mit der Gitterstrukter eines idealen Kristalls wechselwirken, "da sich Materiewellen in einer streng periodischen Struktur ungehindert ausbreiten" \cite[2]{sample}. Daraus folgt das ein idealer Kristall keinen Widerstand besitzt, allerdings ist das praktisch nicht zu realisieren. Reale Proben sind nicht zu 100\,\% aus den selben Atomen gefertigt, auch ist die Gitterstruktur nicht exakt periodisch wodurch ein Widerstand entsteht. Außerdem kommt noch die Wärmebewegung der Ionenrümpfe hinzu wodurch die Ionen aus ihrer Gleichgewichtslage ausgelenkt werden und somit auch mit den Elektronen kollidierne können.
+In einem Leiter ist das oberste Band nur teilweise besetzt, wodurch die hohe Leitfähigkeit von Metallen hervorgerufen wird. Dieses Band wird Leitungsband genannt und die Elektronen darin werden Leitungselektronen genannt. Die Leitungselektronen bewegen sich in der Gitterstruktur wie die Teilchen eines idealen Gases. Es kann nun gezeigt werden, dass die Leitungselektronen nicht mit der Gitterstrukter eines idealen Kristalls wechselwirken, "da sich Materiewellen in einer streng periodischen Struktur ungehindert ausbreiten" \cite[2]{sample}. Daraus folgt das ein idealer Kristall keinen Widerstand besitzt, allerdings ist das praktisch nicht zu realisieren. Reale Proben sind nicht zu 100\,\% aus den selben Atomen gefertigt, auch ist die Gitterstruktur nicht exakt periodisch wodurch ein Widerstand entsteht. Außerdem kommt noch die Wärmebewegung der Ionenrümpfe hinzu wodurch die Ionen aus ihrer Gleichgewichtslage ausgelenkt werden und somit auch mit den Elektronen kollidieren können.
 
 
 \subsection{Herleitung der elektrischen Leitfähigkeit eines Metalles}
@@ -65,7 +65,7 @@ Aus dem elektrischen Widerstand kann nun noch der spezifische Widerstand $\rho$ 
 \end{equation}
 
 
-\subsection{Herleitung weiterer mikroskopischer Leitfähigkeitsparameter aus $R$ und $U_\text{H}$}
+\subsection{Herleitung weiterer mikroskopischer Leitfähigkeitsparameter}
 Aus der Gleichung \eqref{eqn:j} kann die mittlere Driftgeschwindigkeit $\overline{v}_\text{d}$ errechnet werden, indem $j$ durch $I$ und $Q$ ersetzt wird. \\
 Desweiteren kann die sogenannte mittlere freie Weglänge $\overline{l}$ bestimmt werden. Sie gibt die Entfernung zwischen zwei Zusammenstößen im Mittel an. Die mittlere freie Weglänge lässt sich aus
 \begin{equation}
