--- a/20-07.Juni/lit.bib
+++ b/20-07.Juni/lit.bib
@@ -5,3 +5,11 @@
   month = 06,
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V311.pdf},
 }
+
+@manual{Leifi,
+  author = {LEIFI Physik},
+  title = {Elektrizitätslehre, Hall-Effekt},
+  year = 2016,
+  month = 06,
+  address = {http://www.leifiphysik.de/sites/default/files/medien/hall01_beweggeladteilch_ver.gif},
+}
