V311 Theorie und Durchführung fertig

--- a/20-07.Juni/lit.bib
+++ b/20-07.Juni/lit.bib
@@ -6,10 +6,10 @@
   address = {http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/AP/SKRIPT/V311.pdf},
 }
 
-@manual{Leifi,
+@manual{LEIFI,
   author = {LEIFI Physik},
-  title = {Elektrizitätslehre, Hall-Effekt},
+  title = {Elektrizitätslehre},
   year = 2016,
   month = 06,
-  address = {http://www.leifiphysik.de/sites/default/files/medien/hall01_beweggeladteilch_ver.gif},
+  address = {http://www.leifiphysik.de/sites/default/files/medien/hall01\_beweggeladteilch\_ver.gif},
 }
