--- a/20-07.Juni/content/auswertung.tex
+++ b/20-07.Juni/content/auswertung.tex
@@ -1,9 +1,16 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 \subsection{Hystereskurve}
-Die gegen den Spulenstrom aufgetragene Feldstärke ist in dem Diagramm \ref{fig:} aufgetragen. Es kann aus dem Diagramm eine Magnetisierung des Eisenkerns und die existens des B-Feld abgelesen werde.
+Die gegen den Spulenstrom aufgetragene Feldstärke ist in dem Diagramm \ref{fig:Hyst} aufgetragen.
+\begin{figure}
+  \centering
+  \includegraphics[height=8cm]{Hysterese.pdf}
+  \caption{Hysteresekurve}
+  \label{fig:Hyst}
+\end{figure}
+Es kann aus dem Diagramm eine Magnetisierung des Eisenkerns und die existens des B-Feld abgelesen werde.
 
-\subsection{}<++>
+\subsection{Mikroskopische Leitfähigkeitsparameter}
 Zunächst wird die Dicke des vom B-Feld durchsetzten Plättchens berechent. Dies geschieht indem zunächst aus der in Tabelle \ref{tab:RZK} aufgetragenene Stromstärke und Spannung der Widerstand des Verwendeten Materials berechnet wird.
 \begin{table}
   \centering
@@ -51,7 +58,7 @@ und für Kupfer
   \centering
   \begin{tabular}{c|c c c c}
     \toprule
-    $I$ \ A & $U_\text{Kupfer}$ / V & $n_\text{Kupfer}$ / $ \frac{\text{C} 10^{30}}{\text{m}^3} $ & $U_\text{Zink}$ / V & $n_\text{Zink}$ / $\frac{\text{C} 10^{28}}{\text{m}^3}$ \\  
+    $I$ \ A & $U_\text{Kupfer}$ / V & $n_\text{Kupfer}$ / $ \frac{10^{30} \text{C}}{\text{m}^3} $ & $U_\text{Zink}$ / V & $n_\text{Zink}$ / $\frac{10^{28}\text{C}}{\text{m}^3}$ \\  
     \midrule
     0.5	& 0.000 & --- 	& 0.036	& 1.72 \\
     1	& 0.001 & 1.65	& 0.070	& 1.77 \\
@@ -102,8 +109,8 @@ und die Totalgeschwindigkeit $v$ nach Gleichung \ref{eqn:} zu
 \end{eqnarray}
 Aus dem Produkt der mittleren Fugzeit und der Totalgeschwindigkeit ergibt sich die mittlere freie Weglänge von 
 \begin{eqnarray}
-  \overline{l_\text{Kupfer}} = -1.40 \cdot 10^{-8} \, \text{m} , \text{und} \\
-  \overline{l_\text{Zink}} = -6.25 \cdot 10^{-8} \, \text{m} \ .\\
+  \overline{l_\text{Kupfer}} = 1.40 \cdot 10^{-8} \, \text{m} \, \text{und} \\
+  \overline{l_\text{Zink}} = 6.25 \cdot 10^{-8} \, \text{m} \ .\\
 \end{eqnarray}
 Die Beweglichkeit $µ$ der Elektronen wird aus Gleichung \ref{eqn:} berechnet und beträgt für Kupfer 
 \begin{equation}
