--- a/20-07.Juni/content/diskussion.tex
+++ b/20-07.Juni/content/diskussion.tex
@@ -1,6 +1,6 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-
+Die errechneten Werte sind in Tabelle \ref{tab:Erg} aufgeführt.
 \begin{table}
   \centering
   \begin{tabular}{c|c c}
@@ -18,6 +18,7 @@
 
     \bottomrule
   \end{tabular}
-  \caption{<+Caption text+>}
-  \label{tab:<+label+>}
-\end{table}<++>
+  \caption{Berechneten Werte für Kupfer und Zink}
+  \label{tab:Erg}
+\end{table}
+Sie können nicht direkt mit Literaturwerten verglichen werden, da keine geeignete Quelle gefunden wurde. Dennoch ist anzuzweifeln das Zink 11.7 Ladungsträger pro Atom besitzt. 
