sollte fertig sein

--- a/20-07.Juni/content/theorie.tex
+++ b/20-07.Juni/content/theorie.tex
@@ -91,11 +91,16 @@ Aus der mittleren Flugzeit $\overline{\tau}$ lässt sich die Beweglichkeit $\mu$
 	\overline{v}_\text{d} = \mu\,E
 	\label{eqn:Beweglichkeit}
 \end{equation}
+Die Anzahl der Ladungsträger pro Atom kann aus
+\begin{equation}
+	n_\text{A} = \frac{\Rho}{N\,U}
+	\label{eqn:anzahl}
+\end{equation}
+berrechnet werden. Darin ist $\Rho$ die Dichte des Stoffs, $N$ ist die Anzahl der Atome und $U$ ist die Atomare Masseneinheit. 
 
 
 \subsection{Elektrizitätsleistung in Metallen mit positiven Ladungsträgern}
 Bei zweiwertigen Metallen kann es vorkommen, dass sich die Energiebänder überlappen. Dadurch können Elektronen von einem unteren Band in das angrezende darüberliegende Band übergehen. Im unteren Band entsteht dadurch eine Freistelle, welche als Loch bezeichnet wird. Diese Löcher bewegen sich unter dem Einfluss eines von außen anliegendem elektrischen Feld, und verhalten sich wie eine positive Ladung. Dieses Phänomen heißt anomaler Hall-Effekt. Dies ist bei der Messung durch ein umgekehrtes Vorzeichen der Hall-Spannung zu erkennen und es kann auf die Art der Ladungsträger geschlossen werden.
-
 
 
 
