--- a/20-07.Juni/content/auswertung.tex
+++ b/20-07.Juni/content/auswertung.tex
@@ -120,7 +120,7 @@ und für Zink
 \begin{equation}
   µ_\text{Zink} = 5.9 \cdot 10^{-3} \, \frac{\text{C s}}{\text{kg}}
 \end{equation}
-Für die Anzahl wird zunächst die Anzahl der Atomdichte entsprechend Formel \ref{eqn:} berechnet und diese durch die Ladungsträgerdicht geteilt. Für Kupfer ergibt sich eine Atomdichte von
+Für die Anzahl wird zunächst die Anzahl der Atomdichte entsprechend Formel \ref{eqn:anzahl} berechnet und diese durch die Ladungsträgerdicht geteilt. Für Kupfer ergibt sich eine Atomdichte von
 \begin{equation}
   \frac{8920 \frac{kg}{m^3}}{63.4 u} = 8.5 \cdot 10^{28} \, \frac{1}{\text{m}^3}
 \end{equation}
